--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "homepage": "https://github.com/PHPDevsr/minifyku",
     "bin": [
-        "bin/rector"
+        "bin/minifyku"
     ],
     "require": {
         "php": "^7.4 || ^8.0",
