--- a/.github/workflows/test-phpstan.yml
+++ b/.github/workflows/test-phpstan.yml
@@ -3,7 +3,7 @@ name: PHPStan
 on:
   pull_request:
     branches:
-      - dev
+      - 'dev'
     paths:
       - '**.php'
       - 'composer.*'
@@ -11,7 +11,7 @@ on:
       - '.github/workflows/test-phpstan.yml'
   push:
     branches:
-      - dev
+      - 'dev'
     paths:
       - '**.php'
       - 'composer.*'
