--- a/.github/workflows/test-coding-standard.yml
+++ b/.github/workflows/test-coding-standard.yml
@@ -25,11 +25,11 @@ jobs:
   build:
     name: PHP ${{ matrix.php-versions }} Coding Standards
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+    if: (! contains(github.event.head_commit.message, '[ci skip]'))
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0', '8.1']
+        php-versions: ['8.1', '8.4']
 
     steps:
       - name: Checkout
