--- a/.github/workflows/test-phpstan.yml
+++ b/.github/workflows/test-phpstan.yml
@@ -29,11 +29,11 @@ jobs:
   build:
     name: PHP ${{ matrix.php-versions }} Static Analysis
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[ci skip]')"
+    if: (! contains(github.event.head_commit.message, '[ci skip]'))
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.4', '8.0', '8.1', '8.2']
+        php-versions: ['8.1', '8.4']
 
     steps:
       - name: Checkout
