--- a/composer.json
+++ b/composer.json
@@ -20,19 +20,21 @@
     ],
     "homepage": "https://github.com/PHPDevsr/minifyku",
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*",
         "matthiasmullie/minify": "^1.3"
     },
     "require-dev": {
         "codeigniter4/framework": "^4.4",
         "codeigniter/coding-standard": "^1.8",
-        "nexusphp/tachycardia": "^1.4",
+        "codeigniter/phpstan-codeigniter": "^1.5.3",
+        "nexusphp/tachycardia": "^2.4",
         "php-coveralls/php-coveralls": "^2.5",
-        "phpstan/phpstan": "^1.10",
-        "phpunit/phpcov": "^8.2",
-        "phpunit/phpunit": "^9.6",
-        "rector/rector": "1.1.0"
+        "phpstan/phpstan": "^2.1.10",
+        "phpstan/phpstan-strict-rules": "^2.0.4",
+        "phpunit/phpcov": "^9 || ^10",
+        "phpunit/phpunit": "^10.4 || ^11.4",
+        "rector/rector": "2.0.10"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
