fix: ignore php8.4 on php-cs-fixer environment

--- a/.github/workflows/test-coding-standard.yml
+++ b/.github/workflows/test-coding-standard.yml
@@ -66,3 +66,5 @@ jobs:
 
       - name: Run checking coding standard
         run: vendor/bin/php-cs-fixer fix --verbose --ansi --dry-run --using-cache=no --diff
+        env:
+          PHP_CS_FIXER_IGNORE_ENV: ${{ matrix.php-version == '8.4' }}
