--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
         "php-coveralls/php-coveralls": "^2.5",
         "phpstan/phpstan": "^2.1.10",
         "phpstan/phpstan-strict-rules": "^2.0.4",
-        "phpunit/phpcov": "^9 || ^10",
-        "phpunit/phpunit": "^10.4 || ^11.4",
+        "phpunit/phpcov": "^9",
+        "phpunit/phpunit": "^10.4",
         "rector/rector": "2.0.10"
     },
     "minimum-stability": "dev",
