--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "matthiasmullie/minify": "^1.3"
     },
     "require-dev": {
-        "codeigniter4/framework": "^4.4 || ^4.5 || ^4.6",
+        "codeigniter4/framework": "~4.4 || ~4.5 || ~4.6",
         "codeigniter/coding-standard": "^1.8",
         "codeigniter/phpstan-codeigniter": "^1.5.3",
         "nexusphp/tachycardia": "^2.4",
