--- a/.github/workflows/test-phpunit.yml
+++ b/.github/workflows/test-phpunit.yml
@@ -79,14 +79,10 @@ jobs:
         run: |
           vendor/bin/phpcov merge --clover build/logs/clover.xml build/cov
 
-  coveralls:
-    needs: [main]
-    name: Coveralls Finished
-    runs-on: ubuntu-latest
-    steps:
-      - name: Upload Coveralls results
-        uses: coverallsapp/github-action@master
-        continue-on-error: true
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
+      - if: matrix.php-versions == '8.1'
+        name: Upload coverage to Coveralls
+        run: |
+          composer global require php-coveralls/php-coveralls
+          php-coveralls --verbose --exclude-no-stmt --ansi
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
